Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
N/A
Description
The ancient GCC 4.8.5 cannot create ARMv8 code again, starting with MDEV-27774:
|
10.8 a635c40648519fd6c3729c9657872a16a0a20821 |
/home/buildbot/aarch64-centos-7-bintar-initd/build/storage/innobase/buf/buf0flu.cc: In function 'void buf_flush_page_cleaner()':
|
/home/buildbot/aarch64-centos-7-bintar-initd/build/storage/innobase/buf/buf0flu.cc:2400:1: error: could not split insn
|
}
|
^
|
…
|
/home/buildbot/aarch64-centos-7-bintar-initd/build/storage/innobase/buf/buf0flu.cc:2400:1: internal compiler error: in final_scan_insn, at final.c:2897
|
Please submit a full bug report,
|
with preprocessed source if appropriate.
|
See <http://bugzilla.redhat.com/bugzilla> for instructions.
|
Preprocessed source stored into /tmp/ccNWcq6g.out file, please attach this to your bugreport.
|
If I remember correctly, Red Hat would tell that GCC 4.8.5 is not supported anymore. So, we will probably have to add some work-around like in MDEV-26467 in order to disable some optimizations when targeting ARMv8 with GCC 4.8.5.
Attachments
Issue Links
- relates to
-
MDEV-27774 Reduce scalability bottlenecks in mtr_t::commit()
-
- Closed
-