MDEV-27910: Internal compiler error on CentOS 7 ARMv8 GCC 4.8.5

The build started to fail since a635c40648519fd6c3729c9657872a16a0a20821